# Django-react-tutorial

./: README.md  pyproject.toml
backend/: db.sqlite3  main.py  procfile  pyproject.toml
backend/.choreo/: component.yaml  endpoints.yaml
backend/api/: models.py  serializers.py
backend/api/migrations/: 0001_initial.py
backend/backend/: settings.py  urls.py
frontend/src/: App.jsx  api.js
frontend/src/components/: Form.jsx  LoadingIndicator.jsx  Note.jsx  ProtectedRoute.jsx
frontend/src/pages/: Home.jsx  Login.jsx  NotFound.jsx  Register.jsx
